--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/editTextFirstName"
+        android:id="@+id/editFirstName"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_marginTop="140dp"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextLastName"
+        android:id="@+id/editLastName"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -33,10 +33,10 @@
         android:autofillHints="lastName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />
+        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />
 
     <EditText
-        android:id="@+id/editTextEmailAddress"
+        android:id="@+id/editEmailAddress"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -47,10 +47,10 @@
         android:autofillHints="emailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />
+        app:layout_constraintTop_toBottomOf="@+id/editLastName" />
 
     <EditText
-        android:id="@+id/editTextUserName"
+        android:id="@+id/editUserName"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -61,10 +61,10 @@
         android:autofillHints="username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />
 
     <EditText
-        android:id="@+id/editTextPassword"
+        android:id="@+id/editPassword"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -74,10 +74,10 @@
         android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />
+        app:layout_constraintTop_toBottomOf="@+id/editUserName" />
 
     <EditText
-        android:id="@+id/editTextPasswordVerify"
+        android:id="@+id/editPasswordVerify"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -87,7 +87,7 @@
         android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/editPassword" />
 
     <Button
         android:id="@+id/button_register"
@@ -95,10 +95,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/register_button"
-        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordVerify"
+        app:layout_constraintEnd_toEndOf="@+id/editPasswordVerify"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextPasswordVerify"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordVerify" />
+        app:layout_constraintStart_toStartOf="@+id/editPasswordVerify"
+        app:layout_constraintTop_toBottomOf="@+id/editPasswordVerify" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
