--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MessageFragment">
+    tools:context=".ui.AccountFragment">
 
     <TextView
-        android:id="@+id/editMessages"
+        android:id="@+id/editAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_messages"
+        android:text="@string/title_account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
