--- a/app/src/main/res/navigation/auth_graph.xml
+++ b/app/src/main/res/navigation/auth_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.example.team_7_tcss_450.ui.SignInFragment"
+        android:name="com.example.team_7_tcss_450.ui.signin.SignInFragment"
         android:label="fragment_sign_in"
         tools:layout="@layout/fragment_sign_in" >
         <action
@@ -15,15 +15,16 @@
             app:destination="@id/registrationFragment" />
         <action
             android:id="@+id/action_signInFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
+            app:destination="@id/mainActivity"
+            app:launchSingleTop="true" />
         <argument
             android:name="email"
             app:argType="string"
-            app:nullable="true" />
+            android:defaultValue="default" />
         <argument
             android:name="password"
             app:argType="string"
-            app:nullable="true" />
+            android:defaultValue="default" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -38,7 +39,14 @@
         android:id="@+id/mainActivity"
         android:name="com.example.team_7_tcss_450.MainActivity"
         android:label="activity_main"
-        tools:layout="@layout/activity_main" />
+        tools:layout="@layout/activity_main" >
+        <argument
+            android:name="email"
+            app:argType="string" />
+        <argument
+            android:name="jwt"
+            app:argType="string" />
+    </activity>
     <argument
         android:name="email" />
 </navigation>
