--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -21,7 +21,7 @@
         tools:layout="@layout/fragment_message" />
     <fragment
         android:id="@+id/navigation_account"
-        android:name="com.example.team_7_tcss_450.ui.AccountFragment"
+        android:name="com.example.team_7_tcss_450.ui.account.AccountFragment"
         android:label="@string/title_account"
         tools:layout="@layout/fragment_account" />
 </navigation>
