--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="hint_grey">#757575</color>
+
+    <!-- Blue 2 Theme -->
+    <color name="blue2_700">#003249</color>
+    <color name="blue2_500">#007EA7</color>
+    <color name="blue2_200">#80CED7</color>
+    <color name="blue2_100">#9AD1D4</color>
+    <color name="medium_grey">#CCDBDC</color>
+
 </resources>
