--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,7 +17,7 @@
     android:title="@string/title_messages" />
 
 <item
-    android:id="@+id/navigation_account"
+    android:id="@+id/navigation_Contacts"
     android:icon="@drawable/ic_account_black_24dp"
     android:title="@string/title_account" />
 
