launch off point (temp changes)
- Switching development environments
- No updates

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -16,23 +16,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="9dp"
         android:text="John Doe"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintBottom_toTopOf="@+id/button_account"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="163dp" />
 
     <Button
         android:id="@+id/_button_upload_profile"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_margin="10dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
         android:backgroundTint="@color/blue2_500"
         android:insetLeft="0dp"
         android:insetTop="0dp"
@@ -46,7 +47,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView" />
 
-
     <Button
         android:id="@+id/button_account"
         android:layout_width="411dp"
@@ -58,19 +58,14 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_account_black_24dp"
         app:iconTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button_notifications"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.983"
-        tools:iconPadding="27.5dp" />
+        tools:iconPadding="27.5dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="274dp" />
 
     <Button
         android:id="@+id/button_notifications"
         android:layout_width="411dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="4dp"
         android:backgroundTint="#FFFFFF"
         android:gravity="center_vertical"
         android:paddingLeft="25dp"
@@ -78,11 +73,9 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_notifications_black_24dp"
         app:iconTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:iconPadding="27.5dp" />
+        tools:iconPadding="27.5dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="324dp" />
 
     <Button
         android:id="@+id/button_password"
@@ -95,17 +88,14 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_password_black_24dp"
         app:iconTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button_offline_forcast"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:iconPadding="27.5dp" />
+        tools:iconPadding="27.5dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="374dp" />
 
     <Button
         android:id="@+id/button_offline_forcast"
         android:layout_width="411dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="4dp"
         android:backgroundTint="#FFFFFF"
         android:gravity="center_vertical"
         android:paddingLeft="25dp"
@@ -113,11 +103,9 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_offline_black_24dp"
         app:iconTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button_power"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:iconPadding="27.5dp" />
+        tools:iconPadding="27.5dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="417dp" />
 
     <Button
         android:id="@+id/button_power"
@@ -130,11 +118,9 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_power_black_24dp"
         app:iconTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button_logout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:iconPadding="27.5dp" />
+        tools:iconPadding="27.5dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="467dp" />
 
     <Button
         android:id="@+id/button_logout"
@@ -147,24 +133,32 @@
         android:textColor="@color/black"
         app:icon="@drawable/ic_logout_black_24dp"
         app:iconTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/toggle_theme_switch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:iconPadding="24dp" />
+        tools:iconPadding="24dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="528dp" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/toggle_theme_switch"
+        android:id="@+id/toggle_dark_mode"
         android:layout_width="160dp"
         android:layout_height="24dp"
         android:layout_marginBottom="24dp"
         android:text="Light Mode"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_edit_profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent" />
 
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/toggle_theme"
+        android:layout_width="160dp"
+        android:layout_height="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="Switch Theme"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button_edit_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toEndOf="@+id/toggle_dark_mode" />
 
     <Button
         android:id="@+id/button_edit_profile"
@@ -175,7 +169,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
