--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,7 +22,7 @@
 
 
 
-    <style name="Theme.Blue2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RelaxedBlue" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/blue2_500</item>
         <item name="colorPrimaryVariant">@color/blue2_700</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -42,6 +42,21 @@
 
 <!--    <style name="Theme.Blue2.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
 <!--    <style name="Theme.Blue2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
+
+
+
+    <style name="Theme.ForestGreen" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/green_500</item>
+        <item name="colorPrimaryVariant">@color/green_700</item>
+        <item name="colorOnPrimary">@color/tint_green_grey</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/green_100</item>
+        <item name="colorSecondaryVariant">@color/green_200</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+    </style>
 
 
 </resources>
