--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,13 @@
     <color name="blue2_500">#007EA7</color>
     <color name="blue2_200">#80CED7</color>
     <color name="blue2_100">#9AD1D4</color>
-    <color name="medium_grey">#CCDBDC</color>
+    <color name="tint_blue_grey">#CCDBDC</color>
+
+    <!-- Green Theme -->
+    <color name="green_700">#344E41</color>
+    <color name="green_500">#3A5A40</color>
+    <color name="green_200">#588157</color>
+    <color name="green_100">#A3B18A</color>
+    <color name="tint_green_grey">#CCDBDC</color>
 
 </resources>
