--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.WeatherFragment" >
+    tools:context=".ui.WeatherFragment">
 
-    <TextView
-        android:id="@+id/editWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_weather"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/WeatherListFragment"
+        android:name="com.example.team_7_tcss_450.ui.weather.WeeklyForecastFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
+        tools:layout="@layout/fragment_forecast_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
