added Setting Activity / new settings toggles [works]
- Change theme toggle changes from blue to green theme when activated
- Dark Mode Toggle
- Screen Orientation Toggle
- Text status field (currently invisible)

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -33,6 +33,7 @@
     <style name="Theme.ForestGreen" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_200</item>
+        <item name="colorPrimaryDark">@color/green_700</item>
         <item name="colorPrimaryVariant">@color/green_700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
@@ -42,5 +43,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- Applying style like this  -->
+        <item name="actionBarStyle">@style/Widget.MaterialComponents.ActionBar.Primary</item>
     </style>
 </resources>
