--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -7,6 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.signin.SignInFragment">
 
+    <Switch
+        android:id="@+id/switch_signin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:checked="true"
+        android:text="Switch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
+        tools:text="@string/switch_sign_in" />
+
     <EditText
         android:id="@+id/editTextEmailAddress"
         android:layout_width="365dp"
@@ -52,10 +64,10 @@
         android:id="@+id/button_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:text="@string/register_goto_registration"
         app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/button_sign_in"
         app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />
 
